# closed_loop_firmware_demo

./: .gitignore  .travis.yml  Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
auxiliary/: Cargo.toml
auxiliary/src/: lib.rs
src/: f1_app.rs  f4_app.rs  main.rs
