[package]
name = "closed_loop_firmware_demo"
version = "0.1.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"

[dependencies]
serialio = "0.1.2"
cortex-m = "0.5.7"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.5.0"


[dependencies.stm32f4xx-hal]
features = ["stm32f412", "rt"]
version = "0.5.0"

[dependencies.stm32f4]
features = ["stm32f412", "rt"]
version = "0.7.0"
